overflow fix

--- a/client/chat/App.scss
+++ b/client/chat/App.scss
@@ -15,6 +15,7 @@ body {
     font-weight: 200;
     font-size: 15px;
     width: 100%;
+    overflow: hidden;
 }
 
 a {
@@ -55,7 +56,8 @@ a {
     display: flex;
     flex-direction: row;
     flex: 1;
-    width: 100%
+    width: 100%;
+    max-height: 96%;
 }
 
 .MessageWrapper {
